# Lessons_13

./: README.md  currency_rates.json  function.py  main.py  pyproject.toml
13_0/: currency_rates.json  data.json  function.py
13_0/Повторение по библиотекам/: Библиотека datetime в Python.py  Библиотека requests.py
13_1/: Классы и объекты.py  Концепция ООП_txt.py  Концепция ООП_video.py  Создаем и инициализируем.py  Тестирование классов_txt.py  Тестирование классов_video.py
13_1/13_1_1/: test_txt.py  txt.py
13_2/: 00_main_13_2.py  2.0_Classmethod&staticmethod.py  2.1_Printing.py  3.0_Access modes.py  3.1_Access_modes_Module_accessify.py  4.0_Decorator_@property.py
13_2/Решаем задачи/01/: README_01.md  main_01.py
13_2/Решаем задачи/02/: README_02.md  main_02.py
13_2/Решаем задачи/03/: README_03.md  main_03.py
Повторение по библиотекам/: Библиотека requests.py
