[tool.poetry]
name = "13"
version = "0.1.0"
description = ""
authors = ["Mikhail Polyakov PyCharm <mikhapol@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
pytest = "^7.3.1"
accessify = "^0.3.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
